--- a/servletjsp/src/main/webapp/WEB-INF/web.xml
+++ b/servletjsp/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,13 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+  <servlet>
+  	<servlet-name>myServlet</servlet-name>
+  	<servlet-class>servletjsp.servlets.MyServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>myServlet</servlet-name>
+  	<url-pattern>/myServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
