--- a/servletjsp/src/main/webapp/WEB-INF/web.xml
+++ b/servletjsp/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,14 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  
-  <error-page>
-  	<error-code>404</error-code>
-  	<location>/error404.jsp</location>
-  </error-page>
+	<display-name>Archetype Created Web Application</display-name>
+
+	<servlet>
+		<servlet-name>result</servlet-name>
+		<jsp-file>/result.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>result</servlet-name>
+		<url-pattern>/result</url-pattern>
+	</servlet-mapping>
 </web-app>
