--- a/servletjsp/src/main/webapp/WEB-INF/web.xml
+++ b/servletjsp/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,14 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-	<display-name>Archetype Created Web Application</display-name>
-
-	<servlet>
-		<servlet-name>result</servlet-name>
-		<jsp-file>/result.jsp</jsp-file>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>result</servlet-name>
-		<url-pattern>/result</url-pattern>
-	</servlet-mapping>
+	<display-name>Archetype Created Web Application</display-name>	
+	<filter>
+		<filter-name>myfilter</filter-name>
+		<filter-class>servletjsp.filter.Filter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>myfilter</filter-name>
+		<url-pattern>/result.jsp</url-pattern>
+	</filter-mapping>
 </web-app>
